# Teal

./: meson.build
assets/grammars/: teal.ebnf  teal_full.ebnf
assets/sources/: scoreboard.teal
include/common/: concepts.hpp  defs.hpp  error.hpp  istring.hpp  option.hpp  stack.hpp  tree.hpp  util.hpp  vec.hpp
include/frontend/: lexer.hpp  source_file.hpp  source_location.hpp  token.hpp
src/common/: error.cpp  istring.cpp
src/frontend/: lexer.cpp  source_location.cpp  token.cpp
tests/: lexer_test.cpp
